remove extraneous white space from tabs by preventing text overflow

--- a/src/sass/plugins/woocommerce/_tabs.scss
+++ b/src/sass/plugins/woocommerce/_tabs.scss
@@ -16,9 +16,13 @@
 		}
 
 		li {
+			height: 4rem;
 			margin: 0;
 			padding: 0.2rem 1rem;
 			background-color: #ddd;
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
 
 			a {
 				text-decoration: none;
